# BUENAPRO

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
workers/seace/: pyproject.toml
workers/seace/prompts/: match_analysis_v1.txt  match_analysis_v2.txt  tdr_extraction_v1.txt  tdr_extraction_v2.txt
workers/seace/src/buenapro_worker/: __init__.py  cli.py  seace_client.py  settings.py
workers/seace/src/buenapro_worker/app/: __init__.py
workers/seace/src/buenapro_worker/db/: connection.py
workers/seace/src/buenapro_worker/documents/: __init__.py  pdf.py
workers/seace/src/buenapro_worker/extraction/: __init__.py  gemini.py  schemas.py
workers/seace/src/buenapro_worker/jobs/: analyze_match.py  contract_test.py  derive_summary.py  diff_facets.py  download_file.py  extract_tdr.py  match.py  poll_lifecycle.py  poll_search.py  process_contract.py  scheduler.py  send_notification.py
workers/seace/src/buenapro_worker/matching/: __init__.py  analyzer.py  schemas.py
workers/seace/src/buenapro_worker/normalization/: __init__.py  facets.py
workers/seace/src/buenapro_worker/notifications/: __init__.py  channels.py
workers/seace/src/buenapro_worker/observability/: __init__.py  events.py  logging.py
workers/seace/src/buenapro_worker/queue/: __init__.py  repository.py  runner.py
workers/seace/src/buenapro_worker/seace/: __init__.py  client.py  schemas.py
workers/seace/tests/: run_golden.py  seace_contract_test.py
workers/seace/tests/golden/: README.md  manifest.json
workers/seace/tests/golden/expected/: 77967_305820_1342.json  (+4 more)
(+305 files in other folders)
